--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "~8",
     "prettier": "^3.5.3",
-    "tailwindcss": "~3",
+    "tailwindcss": "^4.1.13",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0"
