--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.63.0",
     "react-resizable-panels": "^3.0.6",
+    "react-router-dom": "^7.9.1",
     "recharts": "2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
@@ -68,6 +69,7 @@
     "@types/node": "^22.18.6",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "~10.4.21",
     "dotenv": "^16.6.1",
